crates/pampa/snapshots/error-corpus/json/038.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: json_string
---
[
  {
    "code": "Q-2-22",
    "details": [
      {
        "content": {
          "content": "This is the opening '[!!' mark",
          "type": "markdown"
        },
        "kind": "info",
        "location": {
          "Original": {
            "end_offset": 3,
            "file_id": 0,
            "start_offset": 0
          }
        }
      }
    ],
    "kind": "error",
    "location": {
      "Original": {
        "end_offset": 32,
        "file_id": 0,
        "start_offset": 31
      }
    },
    "problem": {
      "content": "I reached the end of the block before finding a closing ']' for the editorial highlight.",
      "type": "markdown"
    },
    "title": "Unclosed Editorial Highlight"
  }
]
